--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>텟으트</title>
+	<meta charset="utf-8">
+	<title>franknoh</title>
+	<link rel="shortcut icon" type="image/x-icon" href="img/output-onlinepngtools.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://franknoh.github.io">
+	<meta property="og:title" content="KakaotalkBot Hub">
+	<meta property="og:description" content="franknoh 공식 홈페이지 입니다..">
+	<meta property="og:image" content="img/grp_img.jpg">
+	<meta name="description" content="franknoh">
+	<meta name="keywords" content="franknoh">
 </head>
 <body>
 </body>
