--- a/login.html
+++ b/login.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://kkotbot-docs.kro.kr">
-    <meta property="og:title" content="KakaotalkBot Docs">
-    <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
-    <meta property="og:image" content="https://kkotbot-docs.kro.kr/img/grp_img.jpg">
+	<meta charset="utf-8">
+	<link rel="shortcut icon" type="image/x-icon" href="img/output-onlinepngtools.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://franknoh.github.io">
+	<meta property="og:title" content="KakaotalkBot Hub">
+	<meta property="og:description" content="franknoh 공식 홈페이지 입니다..">
+	<meta property="og:image" content="img/grp_img.jpg">
+	<meta name="description" content="franknoh">
+	<meta name="keywords" content="franknoh">
     <script type="text/javascript" src="script/jquery.js"></script>
-    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/basic.css">
     <link rel="stylesheet" href="style/login.css">
