--- a/index.html
+++ b/index.html
@@ -1,18 +1,143 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-	<meta charset="utf-8">
-	<title>franknoh</title>
-	<link rel="shortcut icon" type="image/x-icon" href="img/output-onlinepngtools.ico">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://franknoh.github.io">
-	<meta property="og:title" content="KakaotalkBot Hub">
-	<meta property="og:description" content="franknoh 공식 홈페이지 입니다..">
-	<meta property="og:image" content="img/grp_img.jpg">
-	<meta name="description" content="franknoh">
-	<meta name="keywords" content="franknoh">
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>franknoh</title>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="img/output-onlinepngtools.ico"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://franknoh.github.io" />
+    <meta property="og:title" content="KakaotalkBot Hub" />
+    <meta property="og:description" content="franknoh 공식 홈페이지 입니다.." />
+    <meta property="og:image" content="img/grp_img.jpg" />
+    <meta name="description" content="franknoh" />
+    <meta name="keywords" content="franknoh" />
+    <link rel="stylesheet" href="style/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="style/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Header -->
+      <header id="header" class="alt">
+        <a href="" class="logo"
+          ><strong>franknoh</strong> <span>.github.io</span></a
+        >
+        <nav>
+          <a href="#menu">Menu</a>
+        </nav>
+      </header>
+
+      <!-- Menu -->
+      <nav id="menu">
+        <ul class="links">
+          <li><a href="">Home</a></li>
+          <li><a href="timeline">Timeline</a></li>
+        </ul>
+        <ul class="actions stacked">
+          <li><a href="#one" class="button primary fit">Projects</a></li>
+          <li><a href="login" class="button fit">Log In</a></li>
+        </ul>
+      </nav>
+
+      <!-- Banner -->
+      <section id="banner" class="major">
+        <div class="inner">
+          <header class="major">
+            <h1>franknoh</h1>
+          </header>
+          <div class="content">
+            <p>Android&Web developer.</p>
+            <ul class="actions">
+              <li>
+                <a href="#one" class="button next scrolly">Projects</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!-- Main -->
+      <div id="main">
+        <!-- One -->
+        <section id="one" class="tiles">
+          <article>
+            <span class="image">
+              <img src="img/delta.jpg" alt="" />
+            </span>
+            <header class="major">
+              <h3><a href="https://github.com/franknoh/delta" class="link">Delta editor</a></h3>
+			  <p>high preformance editor for web</p>
+            </header>
+          </article>
+          <article>
+            <span class="image">
+              <img src="img/docs.jpg" alt="" />
+            </span>
+            <header class="major">
+              <h3><a href="https://github.com/nolbo/kakaotalkbot-docs" class="link">KakaotalkBot-Docs</a></h3>
+              <p>documentation of legacy API and javascript</p>
+            </header>
+          </article>
+        </section>
+
+        <!-- Two -->
+        <section id="two">
+          <div class="inner">
+            <header class="major">
+              <h2>About Me</h2>
+            </header>
+            <p>Hello, I am franknoh.</br>I am an android&web developer</br>I am interested in computer science, mathmatics and machine learning.</p>
+            <ul class="actions">
+              <li>
+                <a href="timeline" class="button next">More</a>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
+
+      <!-- Footer -->
+      <footer id="footer">
+        <div class="inner">
+          <ul class="icons">
+            <li>
+              <a href="https://github.com/franknoh" class="icon brands alt fa-github"
+                ><span class="label">GitHub</span></a
+              >
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+
+    <!-- Scripts -->
+    <script src="script/jquery.min.js"></script>
+    <script src="script/jquery.scrolly.min.js"></script>
+    <script src="script/jquery.scrollex.min.js"></script>
+    <script src="script/browser.min.js"></script>
+    <script src="script/breakpoints.min.js"></script>
+    <script src="script/util.js"></script>
+
+    <script src="script/main.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
+    <script src="script/firebase-init.js"></script>
+  </body>
 </html>
