--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section id="one" class="tiles">
           <article>
             <span class="image">
-              <img src="img/delta.jpg" alt="" />
+              <img src="img/delta.png" alt="" />
             </span>
             <header class="major">
               <h3><a href="https://github.com/franknoh/delta" class="link">Delta editor</a></h3>
