--- a/timeline.html
+++ b/timeline.html
@@ -62,7 +62,7 @@
             <p>Android&Web developer.</p>
             <ul class="actions">
               <li>
-                <a href="#tl" class="button next scrolly">Projects</a>
+                <a href="#tl" class="button next scrolly">Timeline</a>
               </li>
             </ul>
           </div>
