--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://franknoh.github.io" />
-    <meta property="og:title" content="KakaotalkBot Hub" />
+    <meta property="og:title" content="Franknoh" />
     <meta property="og:description" content="franknoh 공식 홈페이지 입니다.." />
     <meta property="og:image" content="img/grp_img.jpg" />
     <meta name="description" content="franknoh" />
