--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <img src="img/delta.png" alt="" />
             </span>
             <header class="major">
-              <h3><a href="https://github.com/franknoh/delta" class="link">Delta editor</a></h3>
+              <h3><a target="_blank" href="https://github.com/franknoh/delta" class="link">Delta editor</a></h3>
 			  <p>high preformance editor for web</p>
             </header>
           </article>
@@ -84,7 +84,7 @@
               <img src="img/docs.jpg" alt="" />
             </span>
             <header class="major">
-              <h3><a href="https://github.com/nolbo/kakaotalkbot-docs" class="link">KakaotalkBot-Docs</a></h3>
+              <h3><a target="_blank" href="https://github.com/nolbo/kakaotalkbot-docs" class="link">KakaotalkBot-Docs</a></h3>
               <p>documentation of legacy API and javascript</p>
             </header>
           </article>
@@ -99,7 +99,7 @@
             <p>Hello, I am franknoh.</br>I am an android&web developer</br>I am interested in computer science, mathmatics and machine learning.</p>
             <ul class="actions">
               <li>
-                <a href="timeline" class="button next">More</a>
+                <a href="timeline" target="_blank" class="button next">More</a>
               </li>
             </ul>
           </div>
@@ -111,7 +111,7 @@
         <div class="inner">
           <ul class="icons">
             <li>
-              <a href="https://github.com/franknoh" class="icon brands alt fa-github"
+              <a href="https://github.com/franknoh" target="_blank" class="icon brands alt fa-github"
                 ><span class="label">GitHub</span></a
               >
             </li>
