--- a/timeline.html
+++ b/timeline.html
@@ -107,6 +107,7 @@
           <ul class="icons">
             <li>
               <a
+                target="_blank"
                 href="https://github.com/franknoh"
                 class="icon brands alt fa-github"
                 ><span class="label">GitHub</span></a
