--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/basic.css">
     <link rel="stylesheet" href="style/login.css">
+	<link rel="stylesheet" href="style/main.css">
     <title>로그인</title>
 </head>
 <body>
