--- a/sign_up.html
+++ b/sign_up.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-	<meta charset="utf-8">
-	<link rel="shortcut icon" type="image/x-icon" href="img/output-onlinepngtools.ico">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://franknoh.github.io">
-	<meta property="og:title" content="Franknoh-SignUp">
-	<meta property="og:description" content="franknoh 공식 홈페이지 입니다..">
-	<meta property="og:image" content="img/grp_img.jpg">
-	<meta name="description" content="franknoh">
-	<meta name="keywords" content="franknoh">
+    <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="img/output-onlinepngtools.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://franknoh.github.io">
+    <meta property="og:title" content="Franknoh-SignUp">
+    <meta property="og:description" content="franknoh 공식 홈페이지 입니다..">
+    <meta property="og:image" content="img/grp_img.jpg">
+    <meta name="description" content="franknoh">
+    <meta name="keywords" content="franknoh">
     <script type="text/javascript" src="script/jquery.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/basic.css">
     <link rel="stylesheet" href="style/signup.css">
     <script src="script/upload.js"></script>
+    <link rel="stylesheet" href="style/main.css">
     <title>회원가입</title>
 </head>
+
 <body>
     <div id="content">
         <section id="body">
@@ -44,9 +47,10 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
     <script src="script/firebase-init.js"></script>
-  
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha256.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/enc-base64-min.js"></script>
     <script src="https://kkotbot-docs.kro.kr/script/SignUp.js"></script>
 </body>
+
 </html>
