--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>franknoh</title>
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="img/output-onlinepngtools.ico"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="img/output-onlinepngtools.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://franknoh.github.io" />
     <meta property="og:title" content="Franknoh" />
@@ -20,104 +14,101 @@
     <meta name="description" content="franknoh" />
     <meta name="keywords" content="franknoh" />
     <link rel="stylesheet" href="style/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="style/noscript.css"
-    /></noscript>
-  </head>
-  <body class="is-preload">
+    <noscript>
+        <link rel="stylesheet" href="style/noscript.css" />
+    </noscript>
+</head>
+
+<body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper">
-      <!-- Header -->
-      <header id="header" class="alt">
-        <a href="" class="logo"
-          ><strong>franknoh</strong> <span>.github.io</span></a
-        >
-        <nav>
-          <a href="#menu">Menu</a>
+        <!-- Header -->
+        <header id="header" class="alt">
+            <a href="" class="logo"><strong>franknoh</strong> <span>.github.io</span></a>
+            <nav>
+                <a href="#menu">Menu</a>
+            </nav>
+        </header>
+
+        <!-- Menu -->
+        <nav id="menu">
+            <ul class="links">
+                <li><a href="">Home</a></li>
+                <li><a href="timeline">Timeline</a></li>
+            </ul>
+            <ul class="actions stacked">
+                <li><a href="#one" class="button primary fit">Projects</a></li>
+                <li><a href="login" class="button fit">Log In</a></li>
+            </ul>
         </nav>
-      </header>
 
-      <!-- Menu -->
-      <nav id="menu">
-        <ul class="links">
-          <li><a href="">Home</a></li>
-          <li><a href="timeline">Timeline</a></li>
-        </ul>
-        <ul class="actions stacked">
-          <li><a href="#one" class="button primary fit">Projects</a></li>
-          <li><a href="login" class="button fit">Log In</a></li>
-        </ul>
-      </nav>
-
-      <!-- Banner -->
-      <section id="banner" class="major">
-        <div class="inner">
-          <header class="major">
-            <h1>franknoh</h1>
-          </header>
-          <div class="content">
-            <p>Android&Web developer.</p>
-            <ul class="actions">
-              <li>
-                <a href="#one" class="button next scrolly">Projects</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <!-- Main -->
-      <div id="main">
-        <!-- One -->
-        <section id="one" class="tiles">
-          <article>
-            <span class="image">
-              <img src="img/delta.png" alt="" />
-            </span>
-            <header class="major">
-              <h3><a target="_blank" href="https://github.com/franknoh/delta" class="link">Delta editor</a></h3>
-			  <p>high preformance editor for web</p>
-            </header>
-          </article>
-          <article>
-            <span class="image">
-              <img src="img/docs.jpg" alt="" />
-            </span>
-            <header class="major">
-              <h3><a target="_blank" href="https://github.com/nolbo/kakaotalkbot-docs" class="link">KakaotalkBot-Docs</a></h3>
-              <p>documentation of legacy API and javascript</p>
-            </header>
-          </article>
+        <!-- Banner -->
+        <section id="banner" class="major">
+            <div class="inner">
+                <header class="major">
+                    <h1>franknoh</h1>
+                </header>
+                <div class="content">
+                    <p>Android&Web developer.</p>
+                    <ul class="actions">
+                        <li>
+                            <a href="#one" class="button next scrolly">Projects</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
 
-        <!-- Two -->
-        <section id="two">
-          <div class="inner">
-            <header class="major">
-              <h2>About Me</h2>
-            </header>
-            <p>Hello, I am franknoh.</br>I am an android&web developer</br>I am interested in computer science, mathmatics and machine learning.</p>
-            <ul class="actions">
-              <li>
-                <a href="timeline" target="_blank" class="button next">More</a>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+        <!-- Main -->
+        <div id="main">
+            <!-- One -->
+            <section id="one" class="tiles">
+                <article>
+                    <span class="image">
+                        <img src="img/delta.png" alt="" />
+                    </span>
+                    <header class="major">
+                        <h3><a target="_blank" href="https://github.com/franknoh/delta" class="link">Delta editor</a></h3>
+                        <p>high preformance editor for web</p>
+                    </header>
+                </article>
+                <article>
+                    <span class="image">
+                        <img src="img/docs.jpg" alt="" />
+                    </span>
+                    <header class="major">
+                        <h3><a target="_blank" href="https://github.com/nolbo/kakaotalkbot-docs" class="link">KakaotalkBot-Docs</a></h3>
+                        <p>documentation of legacy API and javascript</p>
+                    </header>
+                </article>
+            </section>
 
-      <!-- Footer -->
-      <footer id="footer">
-        <div class="inner">
-          <ul class="icons">
-            <li>
-              <a href="https://github.com/franknoh" target="_blank" class="icon brands alt fa-github"
-                ><span class="label">GitHub</span></a
-              >
-            </li>
-          </ul>
+            <!-- Two -->
+            <section id="two">
+                <div class="inner">
+                    <header class="major">
+                        <h2>About Me</h2>
+                    </header>
+                    <p>Hello, I am franknoh.</br>I am an android&web developer</br>I am interested in computer science, mathmatics and machine learning.</p>
+                    <ul class="actions">
+                        <li>
+                            <a href="timeline" target="_blank" class="button next">More</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </div>
-      </footer>
+
+        <!-- Footer -->
+        <footer id="footer">
+            <div class="inner">
+                <ul class="icons">
+                    <li>
+                        <a href="https://github.com/franknoh" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
     </div>
 
     <!-- Scripts -->
@@ -139,5 +130,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
     <script src="script/firebase-init.js"></script>
-  </body>
+</body>
+
 </html>
