--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 </header>
                 <div class="content">
                     <p>Android&Web developer.</p>
+<img src="https://github-readme-stats.vercel.app/api/top-langs/?username=franknoh&layout=compact" alt="" />
                     <ul class="actions">
                         <li>
                             <a href="#one" class="button next scrolly">Projects</a>
