--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </header>
                 <div class="content">
                     <p>Android&Web developer.</p>
-                    <img src="https://github-readme-stats.vercel.app/api?username=franknoh&show_icons=true&theme=radical" alt="" />
+                    <img src="https://github-readme-stats.vercel.app/api?username=franknoh&show_icons=true&theme=radical" alt="" style="width: auto;" />
                     <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=franknoh&layout=compact&theme=radical" alt="" />
                     <ul class="actions">
                         <li>
